# wnsobs

./: .clang-format  .cursorrules  .gitignore  CMakeLists.txt  README.md  build-simple.bat  build.bat  download-obs-headers.bat  fix-obs-headers.bat  instruction.md  obs-multistream.def  obs-multistream.sln  obs-multistream.vcxproj  setup-obs-dev.md
.github/workflows/: main.yml
src/: multistream-dock.cpp  multistream-dock.h  multistream-output.cpp  multistream-output.h  obs-multistream-simple.cpp  obs-multistream.cpp  obs-multistream.h  obs-multistream.rc  stream-destination.h
